button alignment corrected, shortened search input bar

--- a/final_frontend/src/css_files/Navbar.css
+++ b/final_frontend/src/css_files/Navbar.css
@@ -51,3 +51,7 @@ body {
      box-shadow: 0px 3px 20px 0px black;
      transform: scale(1.2);
 }
+
+ .search input {
+      width: 390px;
+}
